# nvjpeg2k-numcodecs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
nvjpeg2k_numcodecs/: __init__.py  _nvjpeg2k.pxd  _nvjpeg2k.pyx  nvjpeg2k.py
playground/: _common_bench.py  benchmark_torch.py  get_images.sh  load_via_nvjpeg2k.py
