[build-system]
requires = [
  "setuptools >= 64",
  "setuptools_scm[toml]>=6.2",
  "wheel",
  "Cython",
]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "nvjpeg2k_numcodecs/_version.py"
version_scheme = "post-release"


[tool.pytest.ini_options]
addopts = [
  "-v",
  # (only needed by windows) disable faulthandler plugin to suppress non-fatal error msgs
  "-p", "no:faulthandler",
  "-m", "not compat",
]

[tool.isort]
profile = "black"
py_version = "38"
force_single_line = true

[tool.coverage.run]
source = ["nvjpeg2k_numcodecs"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if MYPY:",
  "^\\s+[.][.][.]$",
]
